# brainstorm

./: Cargo.toml  build.rs
src/: asm.rs  cli.rs  main.rs
src/asm/: common.h  e2k.S  riscv64.S  x86_64.S
