[package]
name = "brainstorm"
version = "0.1.0"
license = "GPL-3.0-only"
authors = ["Denis Drakhnia <numas13@gmail.com>"]
repository = "https://github.com/numas13/brainstorm"
edition = "2021"
rust-version = "1.64"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(has_asm)',
    'cfg(target_arch, values("e2k", "e2k64"))',
]

[dependencies]
bpaf = "0.9"

[build-dependencies]
cc = "1.0.82"

[profile.release]
strip = "debuginfo"
